src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Forecasting Placeholder Process</fullName>
        <description>SFDC1-2157 New Sales Process for Forecasting Placeholder Opportunity record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-Open</fullName>
        </values>
        <values>
            <fullName>6L-Forecasting Placeholder</fullName>
        </values>
        <values>
            <fullName>6W-Forecasting Placeholder</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Gratis Opportunity</fullName>
        <description>SFDC1-6554;Sales would like Gratis Opportunities to be tracked separately for reporting purposes</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-Open</fullName>
        </values>
        <values>
            <fullName>6L-Closed Lost</fullName>
        </values>
        <values>
            <fullName>6W-Closed Won</fullName>
        </values>
        <values>
            <fullName>6WP-Closed Won%2FOrder Processed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inner Year Process</fullName>
        <description>SFDC1-7676:Inner Year Record Type to see Inner Year opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>3-Renewal Pending</fullName>
        </values>
        <values>
            <fullName>5-Renewal Contracting</fullName>
        </values>
        <values>
            <fullName>6W-Renewal Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Business Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1-Sales Qualified</fullName>
        </values>
        <values>
            <fullName>2-Need Confirmed</fullName>
        </values>
        <values>
            <fullName>3-Proposal Development and Delivery</fullName>
        </values>
        <values>
            <fullName>4-Proposal Accepted and Verbal Commit</fullName>
        </values>
        <values>
            <fullName>5-Contracting</fullName>
        </values>
        <values>
            <fullName>6L-Closed Lost</fullName>
        </values>
        <values>
            <fullName>6W-Closed Won</fullName>
        </values>
        <values>
            <fullName>6WP-Closed Won%2FOrder Processed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>3-Renewal Pending</fullName>
        </values>
        <values>
            <fullName>5-Renewal Contracting</fullName>
        </values>
        <values>
            <fullName>6L-Renewal Lost</fullName>
        </values>
        <values>
            <fullName>6W-Renewal Won</fullName>
        </values>
        <values>
            <fullName>6WP-Closed Won%2FOrder Processed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AISUltimateClient__c</fullName>
        <description>This field is used in WRF_POLK.</description>
        <label>AIS Ultimate Client</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountManagers__c</fullName>
        <description>SFDC1-7037: To Summarize all users in the overlay split (account managers)</description>
        <inlineHelpText>Roll ups all users that are in an Opportunity Split of type Account Managers.</inlineHelpText>
        <label>Account Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-547 - To check the Activity is been created on Opportunity</description>
        <label>Activity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalOpportunityFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6937: Additional Opportunity Fields record associated to the Opportunity</description>
        <inlineHelpText>This field holds the Additional Opportunity Fields</inlineHelpText>
        <label>Additional Opportunity Fields</label>
        <referenceTo>AdditionalOpportunityFields__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>SFDC1-919 This formula field calculated the amount from all related products. This field is being used on all page layouts instead of standard Amount field.</description>
        <formula>IF(ISBLANK(Amount),0,Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount calculated from related products</inlineHelpText>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssociatedwithResponseManagementTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4476 : this field shows if Opportunity is Associated with Response Management Team</description>
        <label>Associated with Response Management Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6571: Checkbox required to Stop the process because the customer sent in a Notice letter saying they would like to discuss the terms of the contract.</description>
        <inlineHelpText>Stop Auto Renew?</inlineHelpText>
        <label>Auto Renew Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4728: Create Auto Renewal field on Opportunity that will be updated from Contract.</description>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageDiscountPercentage__c</fullName>
        <description>SFDC1-4275 Average discount percent rolled up from Opportunity product</description>
        <inlineHelpText>Average Discount Percentage on all products</inlineHelpText>
        <label>Average Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BSI__c</fullName>
        <description>SFDC1-4563 This field is used to store the BSI Number</description>
        <label>BSI #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCity__c</fullName>
        <description>SFDC1-5785: New field Bill To : City created</description>
        <inlineHelpText>City description in Billing information</inlineHelpText>
        <label>Bill To : City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToClientName__c</fullName>
        <description>SFDC1-5785: New field Bill To : Client Name created</description>
        <inlineHelpText>Client Name in Billing Address</inlineHelpText>
        <label>Bill To : Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCompanySAP__c</fullName>
        <description>SFDC1-5785: New field Bill To : Company SAP# created</description>
        <inlineHelpText>Company SAP # in Billing information</inlineHelpText>
        <label>Bill To : Company SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactEmailAddress__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact Email Address created</description>
        <inlineHelpText>Contact Email Address in Billing information</inlineHelpText>
        <label>Bill To : Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillToContactFirstName__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact First Name created</description>
        <inlineHelpText>First Name in Billing Address</inlineHelpText>
        <label>Bill To : Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactLastName__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact Last Name created</description>
        <inlineHelpText>Last Name in Billing Address</inlineHelpText>
        <label>Bill To : Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactSAP__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact SAP# created</description>
        <inlineHelpText>Contact SAP # in Billing information</inlineHelpText>
        <label>Bill To : Contact SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactTelephoneNumber__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact Telephone Number created</description>
        <inlineHelpText>Telephone Contact Number in Billing information</inlineHelpText>
        <label>Bill To : Contact Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCountryNew__c</fullName>
        <description>SFDC1-5785: Bill To : Country contains Country Name in Billing Information</description>
        <inlineHelpText>Country description in Billing information</inlineHelpText>
        <label>Bill To : Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToPostalZipCode__c</fullName>
        <description>SFDC1-5785: New field Bill To : Postal/Zip Code created</description>
        <inlineHelpText>Postal/Zipcode description in Billing information</inlineHelpText>
        <label>Bill To : Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStateProvince__c</fullName>
        <description>SFDC1-5785: New field Bill To : State/Province created</description>
        <inlineHelpText>State/Province description in Billing information</inlineHelpText>
        <label>Bill To : State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStreet__c</fullName>
        <description>SFDC1-5785: New field Bill To : Street created</description>
        <inlineHelpText>Street description in Billing information</inlineHelpText>
        <label>Bill To : Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetRange__c</fullName>
        <description>This field captures the budget range for the opportunity</description>
        <inlineHelpText>Please provide the Budget Range.</inlineHelpText>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 25,000</fullName>
                </value>
                <value>
                    <fullName>25,000-50,000</fullName>
                </value>
                <value>
                    <fullName>50,000-100,000</fullName>
                </value>
                <value>
                    <fullName>&gt; 100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6439 This field will be used to by pass the opportunity validations that are executed when opportunity line items are deleted while changing currency.</description>
        <inlineHelpText>This field will be used to by pass the opportunity validations that are executed when opportunity line items are deleted while changing currency.</inlineHelpText>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChannelPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4394 : Channel Partner field on the Opportunity
SFDC1-7087: Added filter criteria to include on Approved Channel Partner.</description>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Global Alliance</value>
            </filterItems>
            <filterItems>
                <field>Account.DataGovernanceStatus__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <infoMessage>Accounts displayed below have Account Type field set as &apos;Global Alliance&apos;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloseDateOriginal__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SFDC1-4551. This shows the original close date, defaults to today. 
For Opp which gets converted via Lead convert, will be populated as Today + 14 through process builder.</description>
        <label>Close Date - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceRestrictions__c</fullName>
        <description>SFDC1-7602 Opportunity - Field for Legal and Compliance. This is a formula reference to the Account object &quot;Compliance Restrictions&quot; field.
SFDC1-8050 Update formula for Opportunity&apos;s Compliance Restriction field</description>
        <formula>Account.ComplianceRestriction__c</formula>
        <inlineHelpText>For accounts with restrictions compliance approval is required on opportunities before they can be moved to closed won.</inlineHelpText>
        <label>Compliance Restrictions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContinuationEndDate__c</fullName>
        <description>SFDC1-8989 &quot;Continuation End Date&quot; on the &apos;Renewal&apos; opportunity record type.</description>
        <inlineHelpText>Continuation End Date</inlineHelpText>
        <label>Continuation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractBeingRenewed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1357; Lookup field for Renewal contract. 
SFDC1-5242; Rename the Contract being Renewed field to Originating Contract
SFDC1-6627 Add a filter for this lookup so that only order form can be selected as originating contract.</description>
        <inlineHelpText>Please select a Contract</inlineHelpText>
        <label>Originating Contract</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Order Form contracts can be added as originating contract.</errorMessage>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Order Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-653 Opportunity Contract End Date will feed the Contract End Date on Contract Object
SFDC1-7027: Updated help text</description>
        <inlineHelpText>Updates to Contract End Date on the Opportunity will update the Contract End Date on the Opportunity Product</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-653 Opportunity Contract Start Date will feed the Contract Start Date on Contract Object
SFDC1-7027: Updated help text</description>
        <inlineHelpText>Updates to Contract Start Date on the Opportunity will update the Contract Start Date on the Opportunity Product</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>This field is used in POLK-WRF.</description>
        <inlineHelpText>European Cost Centers:
4110500 (Germany)
4210500 (Spain)
4410500 (France/Italy)
4510500 (UK)</inlineHelpText>
        <label>Cost Center</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countofrenewalatrisk__c</fullName>
        <description>SFDC1-4160 This field will store the number of renewals at risk associated to the opportunity</description>
        <label>Count of renewal at risk</label>
        <summaryForeignKey>RenewalatRisk__c.OpportunityAtRisk__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CustomerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Customer contacts associated with opportunity.This field is also used for WRF POLK.</description>
        <inlineHelpText>Editable until the product is selected</inlineHelpText>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerRegion__c</fullName>
        <description>SFDC1-529 This field shows the Account&apos;s Region on Opportunity</description>
        <formula>TEXT(Account.AccountCountry__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region where Customer is based</inlineHelpText>
        <label>Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateLastUpdated__c</fullName>
        <description>SFDC1-286;Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date Changes</description>
        <inlineHelpText>Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date Changes</inlineHelpText>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSlipped__c</fullName>
        <description>SFDC1-4551. This shows for how many days this Opportunity has crossed the original closed date.</description>
        <formula>(CloseDateOriginal__c) - (CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Slipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysStale__c</fullName>
        <description>SFDC1-4551. This show for how many days Opportunity is in Stale.</description>
        <formula>IF( 
OR( 
ISPICKVAL(ForecastCategoryName, &apos;Omitted&apos;), 
ISPICKVAL(ForecastCategoryName, &apos;Won&apos;)
), 0,
IF(TODAY() - CloseDate &gt; 0, TODAY() - CloseDate, 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Stale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecisionMakerIdentified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1 -171; If there is a primary contact identified - then auto populate this field, You can&apos;t go to a Sales Stage 4 unless this field is checked</description>
        <inlineHelpText>Please check it before stage 4</inlineHelpText>
        <label>Decision Maker Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountApprovalAttachmentCount__c</fullName>
        <description>SFDC1-7114 Counts the number of opportunity attachments of type &apos;Discount Approval&apos;</description>
        <inlineHelpText>Number of &apos;Discount Approval&apos; attachments</inlineHelpText>
        <label>Discount Approval Attachment Count</label>
        <summaryFilterItems>
            <field>OpportunityAttachment__c.AttachmentType__c</field>
            <operation>equals</operation>
            <value>Discount Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityAttachment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscountOverThreshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4275 Checkbox to indicate if any of the products related to opportunity have crossed discount threshold</description>
        <inlineHelpText>Checked if product(s) are discounted over threshold</inlineHelpText>
        <label>Discount Over Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountThreshold__c</fullName>
        <description>SFDC1-4275 Shows red flag if any product related to opportunity is discounted over threshold</description>
        <formula>IF( 
DiscountOverThreshold__c, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &apos;red&apos;, 30,30) + &quot; This discount is higher than the discount threshold and will trigger an alert to your supervisor once you move the Opportunity into the negotiation stage!&quot;, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &apos;green&apos;, 30,30) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red flag when one or more products discounted over threshold</inlineHelpText>
        <label>Discount Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscoveryCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscoveryDate__c</fullName>
        <description>Date at which the Opportunity hits the Discovery Date. Updated via Workflow.</description>
        <label>Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoesThisAutoRenewalHaveChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes renewal details of opportunity. (JIRA story SFDC1-556)</description>
        <inlineHelpText>Specify if Auto Renewal has any changes.</inlineHelpText>
        <label>Does this Auto Renewal Have Changes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DurationfromClosedDate__c</fullName>
        <description>SFDC1-6636 - The owner of an opportunity needs to be allowed to add a Campaign to a closed Opp (Won or lost) up to 90 days after it has closed.If it&apos;s been more than 90 days the error message to be displayed.</description>
        <formula>CloseDate  -  TODAY()</formula>
        <label>Duration from Closed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedValue__c</fullName>
        <description>SFDC1-5487: To see an Estimated Value field on the Opportunity that will be filled in by the user, so that hey can document how much they estimate will be Variable billings for the Opportunity.
SFDC 1- 6144:Rename the &quot;Estimated Value&quot; field to &quot;Estimated Value of Variable Billing&quot;</description>
        <inlineHelpText>Enter the Estimated Value for Variable Billings on this Opportunity. This field is used for reporting</inlineHelpText>
        <label>Estimated Value of Variable Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedValueatRiskautoupdate__c</fullName>
        <description>SFDC1-4163 This field gets its value from the associated renewal at risk</description>
        <label>Estimated Value at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstReview__c</fullName>
        <description>SFDC1-4551. This field will hold the date of First Review.</description>
        <label>First Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstYearValue__c</fullName>
        <description>SFDC1-4275 First year total price value rolled up from Opportunity Products</description>
        <inlineHelpText>First Year Contract Value</inlineHelpText>
        <label>First Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <description>This formula field captures the forecast category details of opportunity.</description>
        <formula>TEXT(ForecastCategoryName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Probability: Pipeline/Stretch/Commit</inlineHelpText>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormerIP__c</fullName>
        <description>SFDC1-7525 Former IP related to products on opportunity
SFDC1-8785 : updating the field type to Long Text Area</description>
        <inlineHelpText>Former IP automatically populated by system</inlineHelpText>
        <label>Former IP</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-412 Global Account Manager can only be updated by System Administrators and GAM Administrators.
SFDC1-4204 : Updated Lookup filter to allow only Salesforce Users.
SFDC1-6960:  Relabeling the GAM field to Account Manager</description>
        <inlineHelpText>Global Account Manager can only be updated by System Administrators and GAM Administrators.</inlineHelpText>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GovernmentContractName__c</fullName>
        <description>SFDC1-4583 This field is used to store the Government Contract Name</description>
        <label>Government Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovernmentContractNumber__c</fullName>
        <description>SFDC1-4583 This field is used to store the Government Contract Number</description>
        <label>Government Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportantMessage__c</fullName>
        <description>SFDC1-1845 Field to display message to user when &apos;Stop Auto Renew&apos; button is clicked.</description>
        <inlineHelpText>Important Message</inlineHelpText>
        <label>Important Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProRated__c</fullName>
        <description>SFDC1-7082 check at the opportunity level if the underlying subscription products are pro-rated or not</description>
        <inlineHelpText>Checked if opportunity has subscription products which are pro-rated</inlineHelpText>
        <label>Is Pro-Rated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsThisRenewalAutoClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6811 This checkbox is set to true automatically when an auto renewal opportunity is auto closed</description>
        <inlineHelpText>This checkbox is checked automatically when an auto renewal opportunity is auto closed</inlineHelpText>
        <label>Is this Renewal Auto-Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastReview__c</fullName>
        <description>SFDC1-4551. This field will hold the date value of Last Review.</description>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastUpdatedItem__c</fullName>
        <description>SFDC1-286;Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date changes</description>
        <inlineHelpText>Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date changes</inlineHelpText>
        <label>Last Updated Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOrigin__c</fullName>
        <label>Lead Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep Generated</fullName>
                </value>
                <value>
                    <fullName>Marketing Generated</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Analyst Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Populates from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyOpportunityID__c</fullName>
        <description>SFDC1 - 171; For data migrations - legacy opportunity or sso id
SFDC1-5742 : Adding External Id True</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Opportunity or SSO ID</inlineHelpText>
        <label>Legacy Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4353 Legal entity determines the products which are available for selling for an Opportunity</description>
        <inlineHelpText>Legal Entity related to this opportunity</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LossReason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>